# open_oura

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.playwright-mcp/: page-2026-06-24T06-07-08-862Z.yml
apps/ios/: GOAL.md  TESTFLIGHT.md  XCODE_CLOUD.md  build-xcframework.sh  package-libtorch-xcframeworks.sh
apps/ios/OuraApp/: ActivityModel.swift  BLETransport.swift  Components.swift  Core.swift  CvaModel.swift  EventStore.swift  Info.plist  Models.swift  OuraApp.swift  RingSync.swift  SleepStaging.swift  Theme.swift  TorchBridge.h  TorchBridge.mm  build_run.sh  build_run_torch.sh  project-ci.yml  project.yml
apps/ios/spike/: App.swift  Info.plist  TorchBridge.h  TorchBridge.mm  bridge.h  build_and_run.sh  build_and_run_torch.sh  build_libtorch_ios.sh  resume_libtorch_ios.sh  test_lite.cpp
ci_scripts/: ci_post_clone.sh
crates/: README.md
crates/oura-analysis/src/: lib.rs
crates/oura-analysis/src/original/: activity_session.rs  mod.rs
crates/oura-analysis/src/ported/: baseline.rs  mod.rs  sleep_debt.rs
crates/oura-cli/: Cargo.toml  build.rs
crates/oura-cli/src/: activity_model.rs  dashboard.rs  game.rs  live.html  live.rs  main.rs  motion_server.rs  pyrunner.rs  viz.rs
crates/oura-core/: Cargo.toml
crates/oura-core/src/: ble.rs  client.rs  error.rs  events.rs  lib.rs  protocol.rs  storage.rs  transport.rs
crates/oura-ffi/: Cargo.toml
crates/oura-ffi/src/: lib.rs
crates/oura-link/: Cargo.toml
crates/oura-link/src/: ble.rs  client.rs  error.rs  lib.rs
crates/oura-protocol/src/: device.rs  events.rs  protocol.rs
crates/oura-store/src/: storage.rs
crates/oura-summary/: Cargo.toml
crates/oura-summary/src/: lib.rs
dashboard/: README.md
dashboard/web/: app.js  index.html  styles.css
docs/: activity-model-runner.md  android-app-reversing.md  architecture.md  clients-web-and-ios.md  cva-cardiovascular-age.md  data-recovery-map.md  firmware-update.md  horizon-ring3-protocol-cheatsheet.md  model-runners.md  native-decoder.md  original-heuristics.md  rdata-capacity-probe.md  ring-5-observations.md  ring-5-research-plan.md  ring-features.md  security-observations.md  spo2-calibration.md  sync-orchestration.md
docs/algorithms/: README.md  daily-summaries-and-baselines.md  score-weights.md  sleepnet.md  unvalidated-events.md
ios/: README.md  build-rust.sh  project.yml
ios/OpenOura/: Info.plist  OpenOuraApp.swift
ios/OpenOura/BLE/: OuraProtocol.swift  OuraRing.swift
ios/OpenOura/Core/: HealthData.swift  HealthStore.swift  KeyStore.swift  OuraDecode.swift
ios/OpenOura/Views/: Components.swift  ConnectGuideView.swift  LiveView.swift  RingLogo.swift  RootView.swift  SettingsView.swift  SleepView.swift  TodayView.swift
ios/OuraFFI/include/: module.modulemap  ouraffi.h
ios/tools/: render-icon.swift
tools/: _common.py  android_oura_key_extract.py  ble_find_services.py  ble_read_characteristics.py  ble_scan.py  build_daily.py  calibrate_scores.py  export_mobile.py  extract_oura_realm_key.js  fit_scores.py  fit_scores_all.py  fit_sleep_score.py  inspect_models.py  oura_firmware_download.py  oura_probe.py  oura_protocol.py  oura_token_sniff.py  run_activity_model.py  run_cva_model.py  run_models.py  run_sleep_model.py  run_spo2.py  run_stress_model.py  score_readiness.py  score_sleep.py  test_firmware_download.py
tools/frida/: oura_bond_bypass.js
