[package]
name = "oura-core"
description = "Reusable client library for the Oura ring BLE protocol (version-agnostic)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = "1"
hex = "0.4"
uuid = "1"
aes = "0.8"
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
btleplug = { version = "0.11", optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

[features]
default = ["ble", "storage"]
ble = ["dep:btleplug"]
storage = ["dep:rusqlite"]
