[package]
name = "oura-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

# Static library for linking into the iOS app (and any other C ABI consumer).
[lib]
name = "ouraffi"
crate-type = ["staticlib"]

[dependencies]
oura-protocol = { path = "../oura-protocol" }
serde_json = "1"
